# blocco_note

./: CMakeLists.txt  Collezione.cpp  Collezione.h  ContatoreNote.cpp  ContatoreNote.h  Note.cpp  Note.h  NoteImportanti.cpp  NoteImportanti.h  Observer.cpp  Observer.h  README.md  Subject.cpp  Subject.h  main.cpp  test_collezione.cpp  test_contatorenote.cpp  test_note.cpp  test_noteimportanti.cpp
